--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "Theemo - Style Automator",
   "id": "791262205400516364",
   "api": "1.0.0",
-  "main": "dist/main.js",
-  "ui": "dist/ui.html"
+  "main": "dist/main.es.js",
+  "ui": "dist/index.html"
 }
