--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Theemo - Design Tokens",
   "id": "791262205400516364",
   "api": "1.0.0",
+  "editorType": ["figma"],
   "main": "dist/main.js",
   "ui": "dist/ui.html"
 }
