--- a/package.json
+++ b/package.json
@@ -1,46 +1,14 @@
 {
   "name": "figma-theemo",
-  "version": "10",
+  "version": "11",
   "description": "",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "build": "rollup -c --bundleConfigAsCjs",
-    "dev": "rollup -c -w --bundleConfigAsCjs",
-    "start": "sirv public",
-    "_build": "yarn webpack --mode=production",
-    "_start": "yarn webpack --mode=development --watch"
-  },
   "author": "Thomas Gossmann",
   "license": "MIT",
+  "scripts": {
+    "start": "turbo run start --parallel",
+    "build": "turbo run build --parallel"
+  },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.58.0",
-    "@jest/globals": "^29.4.1",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-image": "^3.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@swc-node/jest": "^1.5.6",
-    "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.29",
-    "@types/jest": "^29.4.0",
-    "colord": "^2.9.3",
-    "cssnano": "^4.1.10",
-    "figma-api-stub": "^0.0.56",
-    "figma-plugin-ds-svelte": "^1.4.3",
-    "jest": "^29.4.1",
-    "makeup-listbox": "^0.3.1",
-    "postcss": "^8.4.21",
-    "rollup": "^3.11.0",
-    "rollup-plugin-html-bundle": "0.0.3",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-svg": "^2.0.0",
-    "sirv-cli": "^0.4.6",
-    "svelte": "^3.55.1",
-    "svelte-css-vars": "0.0.1",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.4"
+    "turbo": "^1.7.4"
   }
 }
