--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,17 +1,33 @@
 {
+  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    // "target": "es2017",
     "target": "ESNext",
-    // "moduleResolution": "node",
-    // "lib": [
-    //   "DOM",
-    //   "ES6",
-    //   "DOM.Iterable",
-    //   "ScriptHost",
-    //   "ES2017.object"
-    // ],
-    "esModuleInterop": true,
-    "inlineSourceMap": false,
-    "baseUrl": ".",
-  }
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "resolveJsonModule": true,
+    /**
+     * Typecheck JS in `.svelte` and `.js` files by default.
+     * Disable checkJs if you'd like to use dynamic types in JS.
+     * Note that setting allowJs false does not prevent the use
+     * of JS in `.svelte` files.
+     */
+    "allowJs": true,
+    "checkJs": true,
+    "isolatedModules": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules/@figma"
+    ]
+  },
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
