--- a/shared/package.json
+++ b/shared/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "@theemo/figma-plugin",
+  "name": "@theemo/figma-shared",
   "description": "",
   "scripts": {
-    "start": "spack && chokidar 'src/**/*.ts' -c 'spack'",
-    "build": "spack --mode production",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "_start": "spack && chokidar 'src/**/*.ts' -c 'spack'",
+    "_build": "spack --mode production"
   },
   "author": "Thomas Gossmann",
   "license": "MIT",
   "devDependencies": {
     "@figma/plugin-typings": "^1.58.0",
-    "@jest/globals": "^29.4.3",
-    "@swc-node/jest": "^1.6.2",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.35",
     "@theemo/core": "^0.0.1",
-    "@theemo/figma-shared": "*",
-    "@types/jest": "^29.4.0",
     "chokidar-cli": "^3.0.0",
-    "colord": "^2.9.3",
     "figma-api-stub": "^0.0.56",
-    "jest": "^29.4.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
+  },
+  "exports": {
+    "*": "./src/*"
   }
 }
