--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,27 +1,42 @@
 {
   "name": "@theemo/figma-plugin",
   "description": "",
+  "source": "src/main.ts",
+  "module": "../dist/main.js",
+  "targets": {
+    "module": {
+      "includeNodeModules": true
+    }
+  },
+  "engines": {
+    "node": ">= 8"
+  },
   "scripts": {
-    "start": "spack && chokidar 'src/**/*.ts' -c 'spack'",
-    "build": "spack --mode production",
+    "_start": "spack && chokidar 'src/**/*.ts' -c 'spack'",
+    "_build": "spack --mode production",
+    "start": "parcel watch",
+    "build": "parcel build",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "author": "Thomas Gossmann",
   "license": "MIT",
+  "dependencies": {
+    "colord": "^2.9.3"
+  },
   "devDependencies": {
     "@figma/plugin-typings": "^1.58.0",
     "@jest/globals": "^29.4.3",
     "@swc-node/jest": "^1.6.2",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.35",
-    "@theemo/core": "^0.0.1",
+    "@swc/core": "^1.3.36",
+    "@theemo/core": "link:../../theemo/packages/@theemo/core",
     "@theemo/figma-shared": "*",
     "@types/jest": "^29.4.0",
     "chokidar-cli": "^3.0.0",
-    "colord": "^2.9.3",
     "figma-api-stub": "^0.0.56",
     "jest": "^29.4.3",
+    "parcel": "^2.8.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   }
