--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     // "target": "es2017",
-    "target": "es6",
+    // "target": "es6",
+    "target": "ES2015",
     "moduleResolution": "node",
     "lib": [
       "es6",
