--- a/shared/package.json
+++ b/shared/package.json
@@ -11,7 +11,7 @@
     "@figma/plugin-typings": "^1.58.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.35",
-    "@theemo/core": "^0.0.1",
+    "@theemo/core": "link:../../theemo/packages/@theemo/core",
     "chokidar-cli": "^3.0.0",
     "figma-api-stub": "^0.0.56",
     "tslib": "^2.5.0",
