--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@figma/plugin-typings": "^1.58.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "@theemo/core": "link:../../theemo/packages/@theemo/core",
     "@theemo/figma-shared": "*",
     "@tsconfig/svelte": "^3.0.0",
     "colord": "^2.9.3",
